--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -57,8 +57,8 @@ body {
 }
 .navbar-brand img {
     width: 100px !important;
-    padding-top: 0px !important;
-    padding-bottom: 0px !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 .navbar-brand{
@@ -75,23 +75,23 @@ body {
 }
 
 #cartScreen {
-    visibility: hidden; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    visibility: hidden;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100vw; /* Full width */
-    height: 100vh; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 
 }
 #cartContent {
     background-color: #fefefe;
     z-index: 10;
-    width: 80vw;
+    width: 50vw;
     margin: auto;
 
 }
@@ -99,7 +99,7 @@ body {
 #cartCloseButton {
     background-color: #fefefe;
     z-index: 10;
-    width: 80vw;
+    width: 50vw;
     margin: auto;
 
 }
@@ -125,3 +125,33 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
+
+#foodColumn {
+    width: 30vw;
+}
+
+#cartText {
+    font-size: x-large;
+}
+
+#contactMap {
+    width: 100%;
+    height: 60vh;
+}
+
+.btn-primary {
+    margin-top: 2vh;
+}
+
+#quoteImage {
+    width: 100%;
+
+
+}
+
+#carouselImage {
+    filter: contrast(60%);
+    width: 100%;
+    height: 80vh;
+}
+
